Fixed query result merging